--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/react-fontawesome": "^0.1.7",
     "@material-ui/core": "^4.6.1",
     "@material-ui/icons": "^4.5.1",
+    "animate.css": "^3.7.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0"
